--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -18,6 +18,5 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  },
-  "start":"module"
+  }
 }
