--- a/pizzahutte/package.json
+++ b/pizzahutte/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/fr.pizzahutte.server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
